--- a/styles/style.css
+++ b/styles/style.css
@@ -48,5 +48,20 @@ nav a {
   font-size: 20px;
   font-weight: 400;
 }
-
+.header {
+  background: #fff8f3;
+}
 /* Nav Styling End */
+/* Header Styling Start */
+.banner {
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .banner-text {
+  align-items: center;
+}
+.banner .hero-img {
+  width: 500px;
+}
+/* Header Styling End */
