--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,6 @@ nav a {
 /* Main section style */
 main {
   max-width: 1140px;
-  display: flex;
   margin: 0 auto;
 }
 /* About section */
@@ -112,4 +111,11 @@ main {
   font-size: 18px;
   font-weight: 400;
   line-height: 30px; /* 166.667% */
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-between;
+}
+.info-title {
+  text-align: center;
 }
