--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,9 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-top: 130px;
+}
 /* About section */
 .about {
   padding: 130px;
@@ -124,4 +127,63 @@ main {
 /* What I Do Section */
 #what-i-do {
   padding: 30px 150px;
+}
+.skills-container {
+  display: flex;
+  gap: 30px;
+}
+.skills {
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+.skills-title {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+}
+.skills-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+
+/* Resume Styles */
+.resume-container {
+  display: flex;
+  gap: 30px;
+}
+.resume-container hr {
+  background: #d1d1d1;
+  margin: 30px 0px 30px 0px;
+}
+.resume-heading {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+.resume-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.resume-subtitle {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0px 0px 20px 0px;
+}
+.resume-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+  padding-right: 80px;
+}
+.button-cv {
+  text-align: center;
+  margin: 50px 0px 0px 0px;
 }
