--- a/styles/style.css
+++ b/styles/style.css
@@ -187,3 +187,45 @@ main section {
   text-align: center;
   margin: 50px 0px 0px 0px;
 }
+/* Footer Style */
+footer {
+  display: flex;
+  background: #fff8f3;
+  padding: 130px 130px;
+  margin-top: 130px;
+  gap: 100px;
+}
+.footer-column {
+  width: 50%;
+}
+.footer-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+  text-align: left;
+}
+.footer-description {
+  color: #474747;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+  text-align: left;
+}
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+  display: block;
+  margin-bottom: 20px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  border: 0px;
+  width: 100%;
+}
+
+.footer-social-image a {
+  margin-right: 20px;
+}
